--- a/src/virus/static/virusGroup.css
+++ b/src/virus/static/virusGroup.css
@@ -5,69 +5,154 @@
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  min-width: 1440px;
+  min-height: 688px;
 }
 
 .virus {
   position: absolute;
   z-index: 200;
-  animation-name: virus-move;
-  animation-duration: 2s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
+  animation-fill-mode: forwards;
 }
 
-.virus:hover {
+.virusB:hover,
+.virusC:hover,
+.virusD:hover,
+.virusE:hover,
+.virusF:hover,
+.virusG:hover,
+.virusH:hover {
   animation-play-state: paused;
 }
 
-@keyframes virus-move {
-  from {
-    transform: rotate(0deg) translateX(10px) rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg) translateX(10px) rotate(-360deg);
-  }
+.virusA {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 28%;
+  animation-name: virusA-move;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease;
 }
 
-.virusA {
-  top: 34.67%;
-  right: 52.26%;
-  width: 28.02%;
+@keyframes virusA-move {
+  0% {
+    transform: translate(-50%, -50%) scale(2.4);
+  }
+
+  45.6% {
+    transform: translate(-50%, -50%) scale(0.465);
+  }
+
+  60.4% {
+    transform: translate(-50%, -50%) scale(0.5);
+  }
+
+  75% {
+    transform: translate(-50%, -50%) scale(0.49);
+  }
+
+  100% {
+    transform: translate(-50%, -50%) scale(0.5);
+  }
 }
 
 .virusB {
-  bottom: 7.73%;
-  right: 87.42%;
-  width: 8.38%;
+  bottom: -6%;
+  left: 5.5%;
+  width: 25%;
+  animation-name: virusB-move-rotate, virusB-move-scale;
+  animation-duration: 10s, 10s;
+  animation-iteration-count: infinite, infinite;
+  animation-timing-function: ease, ease;
+}
+
+@keyframes virusB-move-rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  20% {
+    transform: rotate(3deg);
+  }
+
+  48% {
+    transform: rotate(-2deg);
+  }
+
+  79% {
+    transform: rotate(3deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+@keyframes virusB-move-scale {
+  0% {
+    transform: scale(1.05);
+  }
+
+  12.5% {
+    transform: scale(1);
+  }
+
+  26.7% {
+    transform: scale(1.05);
+  }
+
+  43.7% {
+    transform: scale(0.99);
+  }
+
+  57.5% {
+    transform: scale(1.09);
+  }
+
+  80% {
+    transform: scale(1.01);
+  }
+
+  100% {
+    transform: scale(1.05);
+  }
 }
 
 .virusC {
   top: 16.8%;
-  right: 81.74%;
-  width: 18.26%;
+  /* top 有點怪*/
+  left: -0.3%;
+  width: 20%;
 }
 
 .virusD {
-  top: 4.39%;
-  right: 70.65%;
-  width: 8.59%;
+  top: 6%;
+  left: 19.4%;
+  width: 11%;
 }
 
 .virusE {
-  top: 26.25%;
-  right: 18.38%;
-  width: 21.77%;
+  top: -6%;
+  right: 8%;
+  width: 19.5%;
 }
 
 .virusF {
-  top: 0%;
-  right: 0%;
-  width: 18.64%;
+  top: 35%;
+  right: 0.6%;
+  width: 12.5%;
 }
 
 .virusG {
-  bottom: 0%;
-  right: 0%;
-  width: 21.97%;
+  bottom: -17.4%;
+  right: -8.2%;
+  width: 26.6%;
+}
+
+.virusH {
+  top: 60%;
+  right: 24.6%;
+  width: 8.2%;
 }
