修改病毒 A 動態

--- a/src/virus/static/virusGroup.css
+++ b/src/virus/static/virusGroup.css
@@ -34,27 +34,28 @@
   animation-duration: 2s;
   animation-iteration-count: 1;
   animation-timing-function: ease;
+  z-index: 1000;
 }
 
 @keyframes virusA-move {
   0% {
-    transform: translate(-50%, -50%) scale(2.4);
+    transform: translate(-50%, -50%) scale(4.5);
   }
 
   45.6% {
-    transform: translate(-50%, -50%) scale(0.465);
+    transform: translate(-50%, -50%) scale(0.965);
   }
 
   60.4% {
-    transform: translate(-50%, -50%) scale(0.5);
+    transform: translate(-50%, -50%) scale(1);
   }
 
   75% {
-    transform: translate(-50%, -50%) scale(0.49);
+    transform: translate(-50%, -50%) scale(0.99);
   }
 
   100% {
-    transform: translate(-50%, -50%) scale(0.5);
+    transform: translate(-50%, -50%) scale(1);
   }
 }
 
